# Simplicity

./: README.md  config.example.toml  pyproject.toml
src/simplicity/: settings.py  structure.py  utils.py
src/simplicity-demo/: chatbot.py  search_page.py
src/simplicity/_pydantic_ai_adapter/: agent_utils.py
src/simplicity/common/: auto_translate.py  context_qa.py  event.py  single_qa.py  split_question.py  translate.py
src/simplicity/engines/: __init__.py  villv.py
src/simplicity/engines/eden/: engine.py
src/simplicity/engines/pardo/: engine.py
src/simplicity/resources/: __init__.py  jina_client.py  pydantic_ai_llm.py  resource.py
